--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,82 +1,301 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
+
+@inproceedings{filntisis2022visual,
+  title={Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
+  author={Retsinas, Georgios and Filntisis, Panagiotis P. and Kardaris, Nikolaos and Maragos, Petros},
+  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+  preview={wave-mechanics.gif},
+  selected={true},
+  code={https://github.com/filby89/spectre},
+  pdf={},
+  webpage={https://filby89.github.io/spectre}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+
+
+@article{filntisis2017video,
+  title={Video-realistic expressive audio-visual speech synthesis for the Greek language},
+  author={Filntisis, Panagiotis P. and Katsamanis, Athanasios and Tsiakoulis, Pirros and Maragos, Petros},
+  journal={Speech Communication},
+  volume={95},
+  pages={137--152},
+  year={2017},
+  publisher={North-Holland},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/publications/FilntisisKatsamanisTsiakoulis+_VideoRealExprAudioVisSpeechSynthGrLang_SC17.pdf},
+  selected={true},
+  code={https://github.com/filby89/expressive-audiovisual-speech-synthesis-GR}
+}
+
+@inproceedings{filntisis2017photorealistic,
+  title={Photorealistic adaptation and interpolation of facial expressions using HMMS and AAMS for audio-visual speech synthesis},
+  author={Filntisis, Panagiotis P. and Katsamanis, Athanasios and Maragos, Petros},
+  booktitle={IEEE International Conference on Image Processing (ICIP)},
+  pages={2941--2945},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{filntisis2017demonstration,
+  title={Demonstration of an HMM-based photorealistic expressive audio-visual speech synthesis system},
+  author={Filntisis, Panagiotis P. and Katsamanis, Athanasios and Maragos, Petros},
+  booktitle={IEEE International Conference on Image Processing (ICIP)},
+  pages={4588--4588},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{tsiami2018far,
+  title={Far-field audio-visual scene perception of multi-party human-robot interaction for children and adults},
+  author={Tsiami, Antigoni and Filntisis, Panagiotis P. and Efthymiou, Niki and Koutras, Petros and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={6568--6572},
+  year={2018},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_FarfieldAVperceptionHRI-ChildrenAdults_ICASSP.pdf}
+}
+
+@inproceedings{efthymiou2018multi,
+  title={Multi-view fusion for action recognition in child-robot interaction},
+  author={Efthymiou, Niki and Koutras, Petros and Filntisis, Panagiotis P. and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={IEEE International Conference on Image Processing (ICIP)},
+  pages={455--459},
+  year={2018},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/EfthymiouKoutrasFilntisis_MultiViewFusActRecognChildRobotInteract_ICIP18.pdf}
+}
+
+@inproceedings{tsiami2018multi3,
+  title={Multi3: Multi-sensory perception system for multi-modal child interaction with multiple robots},
+  author={Tsiami, Antigoni and Koutras, Petros and Efthymiou, Niki and Filntisis, Panagiotis P. and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={4585--4592},
+  year={2018},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_Multi3-MultisensorMultimodalChildInteractMultRobots_ICRA.pdf}
+}
+
+@incollection{zlatintsi2018web,
+  title={A web-based real-time kinect application for gestural interaction with virtual musical instruments},
+  author={Zlatintsi, Athanasia and Filntisis, Panagiotis P. and Garoufis, Christos and Tsiami, Antigoni and Kritsis, Kosmas and Kaliakatsos-Papakostas, Maximos A and Gkiokas, Aggelos and Katsouros, Vassilis and Maragos, Petros},
+  booktitle={Proceedings of the Audio Mostly 2018 on Sound in Immersion and Emotion},
+  pages={1--6},
+  year={2018},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/ZlatintsiEtAl_WebBasedRealTimeKinectAppGestInteractVMI_%CE%91%CE%9C18-1.pdf}
+}
+
+@article{filntisis2019fusing,
+  title={Fusing body posture with facial expressions for joint recognition of affect in child--robot interaction},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Koutras, Petros and Potamianos, Gerasimos and Maragos, Petros},
+  journal={IEEE Robotics and Automation letters},
+  volume={4},
+  number={4},
+  pages={4011--4018},
+  year={2019},
+  publisher={IEEE},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2019_FilntisisEtAl_FuseBodyFace-AffectRecogn-ChildRobotInteract_ieeeRAL.pdf},
+  selected={true},
+  code={https://github.com/filby89/body-face-emotion-recognition}
+}
+
+@inproceedings{garoufis2019environment,
+  title={An environment for gestural interaction with 3d virtual musical instruments as an educational tool},
+  author={Garoufis, Christos and Zlatintsi, Athanasia and Kritsis, Kosmas and Filntisis, Panagiotis P. and Katsouros, Vassilis and Maragos, Petros},
+  booktitle={European Signal Processing Conference (EUSIPCO)},
+  pages={1--5},
+  year={2019},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2019_GZKFKM_GestureInteractWithVirtualMusicInstrumentsForEducation_EUSIPCO-1-1.pdf}
+}
+
+
+
+@inproceedings{retsinas2020person,
+  title={Person identification using deep convolutional neural networks on short-term signals from wearable sensors},
+  author={Retsinas, George and Filntisis, Panagiotis P. and Efthymiou, Niki and Theodosis, Emmanouil and Zlatintsi, Athanasia and Maragos, Petros},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={3657--3661},
+  year={2020},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/icassp2020_retsinas.pdf}
+}
+
+@inproceedings{maglogiannis2020intelligent,
+  title={An intelligent cloud-based platform for effective monitoring of patients with psychotic disorders},
+  author={Maglogiannis, Ilias and Zlatintsi, Athanasia and Menychtas, Andreas and Papadimatos, Dennis and Filntisis, Panagiotis P. and Efthymiou, Niki and Retsinas, George and Tsanakas, Panayiotis and Maragos, Petros},
+  booktitle={IFIP International Conference on Artificial Intelligence Applications and Innovations},
+  pages={293--307},
+  year={2020},
+  organization={Springer, Cham},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2020_MaglogiannisEtAl_e-Prevention_IntelligentCloudPlatform_AIAI-1.pdf}
+}
+
+@article{efthymiou2022childbot,
+  title={Childbot: Multi-robot perception and interaction with children},
+  author={Efthymiou, Niki and Filntisis, Panagiotis P. and Koutras, Petros and Tsiami, Antigoni and Hadfield, Jack and Potamianos, Gerasimos and Maragos, Petros},
+  journal={Robotics and Autonomous Systems},
+  volume={150},
+  pages={103975},
+  year={2022},
+  publisher={North-Holland},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2022_EfthymiouEtAl_ChildBot-MultiRobotPerception-InteractionChildren_RAS.pdf}
+}
+
+@inproceedings{filntisis2020emotion,
+  title={Emotion understanding in videos through body, context, and visual-semantic embedding loss},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={European Conference on Computer Vision Workshops (ECCVW)},
+  pages={747--755},
+  year={2020},
+  organization={Springer, Cham},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Emotion_understanding_in_videos_through_body__context__and_visual_semantic_embedding_loss-1.pdf},
+  code={https://github.com/filby89/NTUA-BEEU-eccv2020}
+}
+
+@article{filntisis2020identifying,
+  title={Identifying differences in physical activity and autonomic function patterns between psychotic patients and controls over a long period of continuous monitoring using wearable sensors},
+  author={Filntisis, Panagiotis P. and Zlatintsi, Athanasia and Efthymiou, Niki and Kalisperakis, Emmanouil and Karantinos, Thomas and Lazaridi, Marina and Smyrnis, Nikolaos and Maragos, Petros},
+  journal={arXiv preprint arXiv:2011.02285},
+  year={2020}
+}
+
+@inproceedings{pikoulis2021leveraging,
+  title={Leveraging semantic scene characteristics and multi-stream convolutional architectures in a contextual approach for video-based visual emotion recognition in the wild},
+  author={Pikoulis, Ioannis and Filntisis, Panagiotis P. and Maragos, Petros},
+  booktitle={IEEE International Conference on Automatic Face and Gesture Recognition (FG 2021)},
+  pages={01--08},
+  year={2021},
+  organization={IEEE},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_PikoulisEtAl_VideoEmotionRecognInTheWild-SemanticMultiStreamContext_FG.pdf},
+  code={https://github.com/GiannisPikoulis/FG2021-BoLD}
+}
+
+@inproceedings{antoniadis2021exploiting,
+  title={Exploiting emotional dependencies with graph convolutional networks for facial expression recognition},
+  author={Antoniadis, Panagiotis and Filntisis, Panagiotis P. and Maragos, Petros},
+  booktitle={IEEE International Conference on Automatic Face and Gesture Recognition (FG 2021)},
+  pages={1--8},
+  year={2021},
+  organization={IEEE},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2021_AntoniadisEtAl_Emotion-GCN-FacialExpressionRecogn_FG.pdf},
+  code={https://github.com/PanosAntoniadis/emotion-gcn}
+}
+
+@inproceedings{efthymiou2021robotic,
+  title={A robotic edutainment framework for designing child-robot interaction scenarios},
+  author={Efthymiou, Niki and Filntisis, Panagiotis P. and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={PErvasive Technologies Related to Assistive Environments Conference (PETRA)},
+  pages={160--166},
+  year={2021}
+}
+
+@inproceedings{antoniadis2021audiovisual,
+  title={An audiovisual and contextual approach for categorical and continuous emotion recognition in-the-wild},
+  author={Antoniadis, Panagiotis and Pikoulis, Ioannis and Filntisis, Panagiotis P. and Maragos, Petros},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops (CVPRW)},
+  pages={3645--3651},
+  year={2021},
+  code={https://github.com/PanosAntoniadis/NTUA-ABAW2021}
+}
+
+@inproceedings{garoufis2021unsupervised,
+  title={An Unsupervised Learning Approach for Detecting Relapses from Spontaneous Speech in Patients with Psychosis},
+  author={Garoufis, C and Zlatintsi, A and Filntisis, PP and Efthymiou, N and Kalisperakis, E and Garyfalli, V and Karantinos, T and Mantonakis, L and Smyrnis, N and Maragos, P},
+  booktitle={IEEE EMBS International Conference on Biomedical and Health Informatics (BHI)},
+  pages={1--5},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{filntisis2021audiovisual,
+  title={An Audiovisual Child Emotion Recognition System for Child-Robot Interaction Applications},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={European Signal Processing Conference (EUSIPCO)},
+  pages={791--795},
+  year={2021},
+  organization={IEEE},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_FilntisisEtAl_AV-ChildEmotionRecognSystem-ChildRobotInteract_EUSIPCO.pdf}
+}
+
+@article{efthymiou2021visual,
+  title={Visual Robotic Perception System with Incremental Learning for Child--Robot Interaction Scenarios},
+  author={Efthymiou, Niki and Filntisis, Panagiotis P. and Potamianos, Gerasimos and Maragos, Petros},
+  journal={Technologies},
+  volume={9},
+  number={4},
+  pages={86},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+
+@inproceedings{paraperas2022ned,
+  title={Neural Emotion Director: Speech-preserving semantic control of facial expressions in "in-the-wild" videos}, 
+  author={Paraperas Papantoniou, Foivos and Filntisis, Panagiotis P. and Maragos, Petros and Roussos, Anastasios},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (Oral)},
+  year={2022},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Paraperas_NED-SpeechPreservingSemanticControlFacialExpressions_CVPR2022_paper.pdf},
+  webpage={https://foivospar.github.io/NED/},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+  selected={true},
+  code={https://github.com/foivospar/NED}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+
+@inproceedings{garoufis2022towards,
+  title={Towards unsupervised subject-independent speech-based relapse detection in patients with psychosis using variational autoencoders},
+  author={Garoufis, Christos and Zlatintsi, Athanasia and Filntisis, Panagiotis P. and Efthymiou, Niki and Kalisperakis, Emmanouil and Garyfalli, Vassiliki and Lazaridi, Marina and Smyrnis, Nikolaos and Maragos, Petros},
+  booktitle={European Signal Processing Conference (EUSIPCO)},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@inproceedings{panagiotou2022,
+  title={A comparative study of autoencoder architectures for mental health analysis using wearable sensors data},
+  author={Panagiotou, Maria and Zlatintsi, Athanasia and Filntisis, Panagiotis P. and Roumeliotis, Argyris and Efthymiou, Niki and Maragos, Petros},
+  booktitle={European Signal Processing Conference (EUSIPCO)},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{tze2022cartoon,
+  title={Cartoonized Anonymization of Sign Language Videos},
+  author={Tze, Christina Ourania and Filntisis, Panagiotis P. and Roussos, Anastasios and Maragos, Petros},
+  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+@inproceedings{retsinas2022attr,
+  title={Attribute-based Gesture Recognition: Generalization to Unseen Classes},
+  author={Retsinas, Georgios and Filntisis, Panagiotis P. and Kardaris, Nikolaos and Maragos, Petros},
+  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+
+
+@inproceedings{filntisis2022visual,
+  title={Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
+  author={Retsinas, Georgios and Filntisis, Panagiotis P. and Kardaris, Nikolaos and Maragos, Petros},
+  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
+  pages={To Appear},
+  year={2022},
+  organization={IEEE},
+  bibtex_show={true}
 }
+
+
