--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,18 +3,16 @@
 
 
 
-@inproceedings{filntisis2022visual,
-  title={Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
-  author={Retsinas, Georgios and Filntisis, Panagiotis P. and Kardaris, Nikolaos and Maragos, Petros},
-  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
-  pages={To Appear},
+@misc{filntisis2022visual,
+  title = {Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
+  author = {Filntisis, Panagiotis P. and Retsinas, George and Paraperas-Papantoniou, Foivos and Katsamanis, Athanasios and Roussos, Anastasios and Maragos, Petros},
   year={2022},
-  organization={IEEE},
   bibtex_show={true},
   selected={true},
   code={https://github.com/filby89/spectre},
-  pdf={},
-  webpage={https://filby89.github.io/spectre}
+  webpage={https://filby89.github.io/spectre},
+  pdf={https://arxiv.org/pdf/2207.11094},
+  url = {https://arxiv.org/abs/2207.11094},  
 }
 
 
