update stuff and selected research

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,13 +6,79 @@
 @misc{filntisis2022visual,
   title = {Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
   author = {Filntisis, Panagiotis P. and Retsinas, George and Paraperas-Papantoniou, Foivos and Katsamanis, Athanasios and Roussos, Anastasios and Maragos, Petros},
-  year={2022},
-  bibtex_show={true},
   selected={true},
   code={https://github.com/filby89/spectre},
-  webpage={https://filby89.github.io/spectre},
+  website={https://filby89.github.io/spectre},
   pdf={https://arxiv.org/pdf/2207.11094},
-  url = {https://arxiv.org/abs/2207.11094},  
+  url = {https://arxiv.org/abs/2207.11094},
+  preview = {spectre.gif},
+  publisher = {arXiv},
+  year={2022},
+  bibtex_show={true}
+}
+
+@inproceedings{paraperas2022ned,
+  title={Neural Emotion Director: Speech-preserving semantic control of facial expressions in "in-the-wild" videos}, 
+  author={Paraperas Papantoniou, Foivos and Filntisis, Panagiotis P. and Maragos, Petros and Roussos, Anastasios},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (Oral)},
+  year={2022},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Paraperas_NED-SpeechPreservingSemanticControlFacialExpressions_CVPR2022_paper.pdf},
+  website={https://foivospar.github.io/NED/},
+  selected={true},
+  code={https://github.com/foivospar/NED},
+  preview={ned.png},
+  bibtex_show={true}
+}
+
+
+
+
+@inproceedings{filntisis2021audiovisual,
+  title={An Audiovisual Child Emotion Recognition System for Child-Robot Interaction Applications},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={European Signal Processing Conference (EUSIPCO)},
+  pages={791--795},
+  year={2021},
+  organization={IEEE},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_FilntisisEtAl_AV-ChildEmotionRecognSystem-ChildRobotInteract_EUSIPCO.pdf},
+  selected={true},
+  preview={audiovisual.png},
+  bibtex_show={true},
+  code={https://github.com/filby89/multimodal-emotion-recognition/}
+}
+
+@inproceedings{filntisis2020emotion,
+  title={Emotion understanding in videos through body, context, and visual-semantic embedding loss},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
+  booktitle={European Conference on Computer Vision Workshops (ECCVW)},
+  pages={747--755},
+  year={2020},
+  organization={Springer, Cham},
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Emotion_understanding_in_videos_through_body__context__and_visual_semantic_embedding_loss-1.pdf},
+  code={https://github.com/filby89/NTUA-BEEU-eccv2020},
+  bibtex_show={true},
+  preview={beeu.png},
+  selected={true},
+  note={Challenge Winner!}
+}
+
+
+
+
+@article{filntisis2019fusing,
+  title={Fusing body posture with facial expressions for joint recognition of affect in child--robot interaction},
+  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Koutras, Petros and Potamianos, Gerasimos and Maragos, Petros},
+  journal={IEEE Robotics and Automation Letters},
+  volume={4},
+  number={4},
+  pages={4011--4018},
+  year={2019},
+  publisher={IEEE},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2019_FilntisisEtAl_FuseBodyFace-AffectRecogn-ChildRobotInteract_ieeeRAL.pdf},
+  selected={true},
+  code={https://github.com/filby89/body-face-emotion-recognition},
+  preview={fusing.png},
+  bibtex_show={true}
 }
 
 
@@ -27,7 +93,9 @@
   publisher={North-Holland},
   pdf={https://robotics.ntua.gr/wp-content/uploads/publications/FilntisisKatsamanisTsiakoulis+_VideoRealExprAudioVisSpeechSynthGrLang_SC17.pdf},
   selected={true},
-  code={https://github.com/filby89/expressive-audiovisual-speech-synthesis-GR}
+  code={https://github.com/filby89/expressive-audiovisual-speech-synthesis-GR},
+  preview={eavtts.gif},
+  bibtex_show={true}
 }
 
 @inproceedings{filntisis2017photorealistic,
@@ -36,8 +104,12 @@
   booktitle={IEEE International Conference on Image Processing (ICIP)},
   pages={2941--2945},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true},
+  pdf={https://www.researchgate.net/profile/Panagiotis-Filntisis/publication/323352468_Photorealistic_adaptation_and_interpolation_of_facial_expressions_using_HMMS_and_AAMS_for_audio-visual_speech_synthesis/links/5aa9225baca272d39cd50414/Photorealistic-adaptation-and-interpolation-of-facial-expressions-using-HMMS-and-AAMS-for-audio-visual-speech-synthesis.pdf}
 }
+
+
 
 @inproceedings{filntisis2017demonstration,
   title={Demonstration of an HMM-based photorealistic expressive audio-visual speech synthesis system},
@@ -45,7 +117,9 @@
   booktitle={IEEE International Conference on Image Processing (ICIP)},
   pages={4588--4588},
   year={2017},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true},
+  pdf={https://www.researchgate.net/profile/Panagiotis-Filntisis/publication/323354865_Demonstration_of_an_HMM-based_photorealistic_expressive_audio-visual_speech_synthesis_system/links/5aa922ab458515178818a351/Demonstration-of-an-HMM-based-photorealistic-expressive-audio-visual-speech-synthesis-system.pdf}
 }
 
 @inproceedings{tsiami2018far,
@@ -55,7 +129,8 @@
   pages={6568--6572},
   year={2018},
   organization={IEEE},
-  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_FarfieldAVperceptionHRI-ChildrenAdults_ICASSP.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_FarfieldAVperceptionHRI-ChildrenAdults_ICASSP.pdf},
+  bibtex_show={true}
 }
 
 @inproceedings{efthymiou2018multi,
@@ -65,7 +140,8 @@
   pages={455--459},
   year={2018},
   organization={IEEE},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/EfthymiouKoutrasFilntisis_MultiViewFusActRecognChildRobotInteract_ICIP18.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/EfthymiouKoutrasFilntisis_MultiViewFusActRecognChildRobotInteract_ICIP18.pdf},
+  bibtex_show={true}
 }
 
 @inproceedings{tsiami2018multi3,
@@ -75,7 +151,8 @@
   pages={4585--4592},
   year={2018},
   organization={IEEE},
-  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_Multi3-MultisensorMultimodalChildInteractMultRobots_ICRA.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/publications/2018_TsiamiEtAl_Multi3-MultisensorMultimodalChildInteractMultRobots_ICRA.pdf},
+  bibtex_show={true}
 }
 
 @incollection{zlatintsi2018web,
@@ -84,22 +161,10 @@
   booktitle={Proceedings of the Audio Mostly 2018 on Sound in Immersion and Emotion},
   pages={1--6},
   year={2018},
-  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/ZlatintsiEtAl_WebBasedRealTimeKinectAppGestInteractVMI_%CE%91%CE%9C18-1.pdf}
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/ZlatintsiEtAl_WebBasedRealTimeKinectAppGestInteractVMI_%CE%91%CE%9C18-1.pdf},
+  bibtex_show={true}
 }
 
-@article{filntisis2019fusing,
-  title={Fusing body posture with facial expressions for joint recognition of affect in child--robot interaction},
-  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Koutras, Petros and Potamianos, Gerasimos and Maragos, Petros},
-  journal={IEEE Robotics and Automation letters},
-  volume={4},
-  number={4},
-  pages={4011--4018},
-  year={2019},
-  publisher={IEEE},
-  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2019_FilntisisEtAl_FuseBodyFace-AffectRecogn-ChildRobotInteract_ieeeRAL.pdf},
-  selected={true},
-  code={https://github.com/filby89/body-face-emotion-recognition}
-}
 
 @inproceedings{garoufis2019environment,
   title={An environment for gestural interaction with 3d virtual musical instruments as an educational tool},
@@ -108,7 +173,8 @@
   pages={1--5},
   year={2019},
   organization={IEEE},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2019_GZKFKM_GestureInteractWithVirtualMusicInstrumentsForEducation_EUSIPCO-1-1.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2019_GZKFKM_GestureInteractWithVirtualMusicInstrumentsForEducation_EUSIPCO-1-1.pdf},
+  bibtex_show={true}
 }
 
 
@@ -120,7 +186,8 @@
   pages={3657--3661},
   year={2020},
   organization={IEEE},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/icassp2020_retsinas.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/icassp2020_retsinas.pdf},
+  bibtex_show={true}
 }
 
 @inproceedings{maglogiannis2020intelligent,
@@ -130,7 +197,8 @@
   pages={293--307},
   year={2020},
   organization={Springer, Cham},
-  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2020_MaglogiannisEtAl_e-Prevention_IntelligentCloudPlatform_AIAI-1.pdf}
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2020_MaglogiannisEtAl_e-Prevention_IntelligentCloudPlatform_AIAI-1.pdf},
+  bibtex_show={true}
 }
 
 @article{efthymiou2022childbot,
@@ -141,25 +209,18 @@
   pages={103975},
   year={2022},
   publisher={North-Holland},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2022_EfthymiouEtAl_ChildBot-MultiRobotPerception-InteractionChildren_RAS.pdf}
+  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2022_EfthymiouEtAl_ChildBot-MultiRobotPerception-InteractionChildren_RAS.pdf},
+  bibtex_show={true}
 }
 
-@inproceedings{filntisis2020emotion,
-  title={Emotion understanding in videos through body, context, and visual-semantic embedding loss},
-  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
-  booktitle={European Conference on Computer Vision Workshops (ECCVW)},
-  pages={747--755},
-  year={2020},
-  organization={Springer, Cham},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Emotion_understanding_in_videos_through_body__context__and_visual_semantic_embedding_loss-1.pdf},
-  code={https://github.com/filby89/NTUA-BEEU-eccv2020}
-}
 
 @article{filntisis2020identifying,
   title={Identifying differences in physical activity and autonomic function patterns between psychotic patients and controls over a long period of continuous monitoring using wearable sensors},
   author={Filntisis, Panagiotis P. and Zlatintsi, Athanasia and Efthymiou, Niki and Kalisperakis, Emmanouil and Karantinos, Thomas and Lazaridi, Marina and Smyrnis, Nikolaos and Maragos, Petros},
   journal={arXiv preprint arXiv:2011.02285},
-  year={2020}
+  year={2020},
+  bibtex_show={true},
+  pdf={https://arxiv.org/pdf/2011.02285.pdf}
 }
 
 @inproceedings{pikoulis2021leveraging,
@@ -170,7 +231,8 @@
   year={2021},
   organization={IEEE},
   pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_PikoulisEtAl_VideoEmotionRecognInTheWild-SemanticMultiStreamContext_FG.pdf},
-  code={https://github.com/GiannisPikoulis/FG2021-BoLD}
+  code={https://github.com/GiannisPikoulis/FG2021-BoLD},
+  bibtex_show={true}
 }
 
 @inproceedings{antoniadis2021exploiting,
@@ -181,7 +243,8 @@
   year={2021},
   organization={IEEE},
   pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/2021_AntoniadisEtAl_Emotion-GCN-FacialExpressionRecogn_FG.pdf},
-  code={https://github.com/PanosAntoniadis/emotion-gcn}
+  code={https://github.com/PanosAntoniadis/emotion-gcn},
+  bibtex_show={true}
 }
 
 @inproceedings{efthymiou2021robotic,
@@ -189,7 +252,9 @@
   author={Efthymiou, Niki and Filntisis, Panagiotis P. and Potamianos, Gerasimos and Maragos, Petros},
   booktitle={PErvasive Technologies Related to Assistive Environments Conference (PETRA)},
   pages={160--166},
-  year={2021}
+  year={2021},
+  bibtex_show={true},
+  pdf={https://www.researchgate.net/profile/Niki-Efthymiou/publication/352860176_A_robotic_edutainment_framework_for_designing_child-robot_interaction_scenarios/links/6194d04861f0987720a5f090/A-robotic-edutainment-framework-for-designing-child-robot-interaction-scenarios.pdf}
 }
 
 @inproceedings{antoniadis2021audiovisual,
@@ -198,7 +263,8 @@
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops (CVPRW)},
   pages={3645--3651},
   year={2021},
-  code={https://github.com/PanosAntoniadis/NTUA-ABAW2021}
+  code={https://github.com/PanosAntoniadis/NTUA-ABAW2021},
+  bibtex_show={true}
 }
 
 @inproceedings{garoufis2021unsupervised,
@@ -207,18 +273,11 @@
   booktitle={IEEE EMBS International Conference on Biomedical and Health Informatics (BHI)},
   pages={1--5},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true},
+  pdf={http://cvsp.cs.ntua.gr/publications/confr/Garoufis+_BHI2021_UnsupervisedLearningRelapseDetection_Paper.pdf}
 }
 
-@inproceedings{filntisis2021audiovisual,
-  title={An Audiovisual Child Emotion Recognition System for Child-Robot Interaction Applications},
-  author={Filntisis, Panagiotis P. and Efthymiou, Niki and Potamianos, Gerasimos and Maragos, Petros},
-  booktitle={European Signal Processing Conference (EUSIPCO)},
-  pages={791--795},
-  year={2021},
-  organization={IEEE},
-  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_FilntisisEtAl_AV-ChildEmotionRecognSystem-ChildRobotInteract_EUSIPCO.pdf}
-}
 
 @article{efthymiou2021visual,
   title={Visual Robotic Perception System with Incremental Learning for Child--Robot Interaction Scenarios},
@@ -228,21 +287,12 @@
   number={4},
   pages={86},
   year={2021},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={Multidisciplinary Digital Publishing Institute},
+  pdf={http://robotics.ntua.gr/wp-content/uploads/sites/2/2021_EfthymiouEtAl_VisualRobotPerceptionSystem-ChildRobotInteract_Technologies.pdf},
+  bibtex_show={true}
 }
 
 
-@inproceedings{paraperas2022ned,
-  title={Neural Emotion Director: Speech-preserving semantic control of facial expressions in "in-the-wild" videos}, 
-  author={Paraperas Papantoniou, Foivos and Filntisis, Panagiotis P. and Maragos, Petros and Roussos, Anastasios},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (Oral)},
-  year={2022},
-  pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Paraperas_NED-SpeechPreservingSemanticControlFacialExpressions_CVPR2022_paper.pdf},
-  webpage={https://foivospar.github.io/NED/},
-  bibtex_show={true},
-  selected={true},
-  code={https://github.com/foivospar/NED}
-}
 
 
 @inproceedings{garoufis2022towards,
@@ -251,7 +301,8 @@
   booktitle={European Signal Processing Conference (EUSIPCO)},
   pages={To Appear},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true}
 }
 
 
@@ -261,7 +312,8 @@
   booktitle={European Signal Processing Conference (EUSIPCO)},
   pages={To Appear},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true}
 }
 
 @inproceedings{tze2022cartoon,
@@ -270,7 +322,8 @@
   booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP},
   pages={To Appear},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  bibtex_show={true}
 }
 
 
@@ -280,19 +333,9 @@
   booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
   pages={To Appear},
   year={2022},
-  organization={IEEE}
-}
-
-
-
-@inproceedings{filntisis2022visual,
-  title={Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
-  author={Retsinas, Georgios and Filntisis, Panagiotis P. and Kardaris, Nikolaos and Maragos, Petros},
-  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
-  pages={To Appear},
-  year={2022},
   organization={IEEE},
   bibtex_show={true}
 }
+
 
 
