switch twitter to linkedin

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,13 @@
 
 
 
-@misc{filntisis2022visual,
+@article{filntisis2022visual,
   title = {Visual Speech-Aware Perceptual 3D Facial Expression Reconstruction from Videos},
   author = {Filntisis, Panagiotis P. and Retsinas, George and Paraperas-Papantoniou, Foivos and Katsamanis, Athanasios and Roussos, Anastasios and Maragos, Petros},
   selected={true},
   code={https://github.com/filby89/spectre},
   website={https://filby89.github.io/spectre},
+  journal={arXiv preprint arXiv:2207.11094},
   pdf={https://arxiv.org/pdf/2207.11094},
   url = {https://arxiv.org/abs/2207.11094},
   preview = {spectre.gif},
@@ -20,7 +21,7 @@
 @inproceedings{paraperas2022ned,
   title={Neural Emotion Director: Speech-preserving semantic control of facial expressions in "in-the-wild" videos}, 
   author={Paraperas Papantoniou, Foivos and Filntisis, Panagiotis P. and Maragos, Petros and Roussos, Anastasios},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (Oral)},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (Oral - Best Paper Finalist)},
   year={2022},
   pdf={https://robotics.ntua.gr/wp-content/uploads/sites/2/Paraperas_NED-SpeechPreservingSemanticControlFacialExpressions_CVPR2022_paper.pdf},
   website={https://foivospar.github.io/NED/},
@@ -319,7 +320,7 @@
 @inproceedings{tze2022cartoon,
   title={Cartoonized Anonymization of Sign Language Videos},
   author={Tze, Christina Ourania and Filntisis, Panagiotis P. and Roussos, Anastasios and Maragos, Petros},
-  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP},
+  booktitle={Image, Video, and Multidimensional Signal Processing Workshop (IVMSP)},
   pages={To Appear},
   year={2022},
   organization={IEEE},
